# tan-formatting

./: Cargo.toml  README.md
src/: compact.rs  formatter.rs  layout.rs  lib.rs  pretty.rs  types.rs  util.rs
tests/: compact_test.rs  layout_test.rs  pretty_test.rs
tests/common/: mod.rs
tests/fixtures/: array.pretty.tan  array.tan  code.pretty.tan  code.tan  cond.pretty.tan  cond.tan  data-2.pretty.tan  data-2.tan  data.pretty.tan  data.tan  fibalike.pretty.tan  fibalike.tan  fibonacci.pretty.tan  fibonacci.tan  for.pretty.tan  for.tan  func-ann.tan  func-def.pretty.tan  func-def.tan  inline-comments.pretty.tan  inline-comments.tan  interpolated-str.pretty.tan  let-ann.pretty.tan  let-ann.tan  multi-line-text.tan  nested-call.pretty.tan  nested-call.tan  nested-function.pretty.tan  nested-function.tan  pairs-and-comments.pretty.tan  pairs-and-comments.tan  quote.pretty.tan  quote.tan  range.pretty.tan  range.tan  simple_example.compact.tan  simple_example.formatted.tan  simple_example.tan  unquote.pretty.tan  unquote.tan
