[package]
name = "tan_fmt"
description = "Formatting technology for the Tan Language"
version = "0.6.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tanlang-org/tan_fmt"
keywords = ["tan", "language", "formatting", "pretty-print"]
authors = ["George Moschovitis <gmosx@reizu.org>"]
edition = "2021"

[dependencies]
regex = "1"
tan = { path = "../tan", version = "0.6" }
