[package]
name = "tan-formatting"
description = "Formatting infrastructure for the Tan Language"
version = "0.14.0"
license = "Apache-2.0"
repository = "https://github.com/tan-language/tan_fmt"
keywords = ["tan", "language", "formatting", "pretty-print"]
authors = ["George Moschovitis <gmosx@reizu.org>"]
edition = "2021"

[dependencies]
regex = "1"
tan = { path = "../tan", version = "0.14" }
